--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8"> <!--utf-8 incluye todos los simbolos internacionales-->
-    <title> 💕Veronica's Personal site</title>
+    <title> 💕Veronica's Personal site</title> 
+    <link rel="stylesheet" href="css/styles.css">
+
   </head>
-  <body style="background-color: #cbf1f5;">
+ 
+  <body>
     <table cellspacing="50">
       <tr>
         <td><img src="images/perfil.png" alt="Veronica Profile picture"></td>
