--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>My Contact details</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <h3> My Contact details</h3>
     <ol>
     <li>Movil: 3320579803</li>
     <li>Residencia: Guadalajara, Jalisco</li>
     <li>E-mail: veronica.olvera.cruz@outlook.com</li>
     </ol>
+    <hr>
     <form class="" action="mailto:veronica.olvera.cruz@gmail.com" method="post" enctype="text/plain">
       <label>Tu Nombre: </label>
       <input type="text" name="nombre" value=""><br>
